source/stylesheets/style.css
body {
	padding: 0 !important;
	font-size:18px;
	line-height:24px;
}

p {
	margin:12px 0;
}

article {
  max-width:725px;
}

.bar-indicator { 
	width: 220px;
	height: 20px;
	background: url(/images/bar-indicator.gif);
}

.result a.title { text-decoration:underline; }
.result small { color:#093; }

.anchor { margin-left: -14px;
font-size: 14px;
color: black;
line-height: 26px;
}

.anchor-icon {
  display: inline-block;
  width:14px;
}

.anchor-icon i {
  left: -3px;
  position: relative;
}

.icon-link { display:none; }

#logo {
	margin-top:18px;
	display:inline-block;
	width:160px;
	height:45px;
	background: url(/images/sendgrid-logo.png?embed=true);
}

#content img {
	border-bottom: 1px solid #ddd;
	border-top: 1px solid #ddd;
	padding-top:12px;
	padding-bottom:12px;
}

li { line-height:24px; }

hr.docs-separator {
	margin: 40px 0 39px;
}


.callout-info {
  background-color: #f0f7fd;
  border-color: #d0e3f0;
}

.callout-warning {
background-color: #fcf2f2;
border-color: #dFb5b4;
}

.callout {
  margin: 20px 0;
  padding: 15px 30px 15px 15px;
  border-left: 5px solid #eee;
}

.code-buttons {
  margin: 0 40px -19px;
}

.code-buttons > .nav-tabs > li > .code-button {
  padding-top:2px;
  padding-bottom:2px;
  border:1px solid #EEE;
  background-color: #fff;
}

.code-buttons > .nav-tabs > li .code-button:hover, .code-buttons > .nav-tabs > li .code-button.hover { 
  cursor: pointer;
  background-color: #eee;
}


figure.code {
	margin: 0 40px 1.5em;
}


.no-flash figure.code {
	margin-top: 1.5em;
}

.no-flash .copycode {
	display: none;
}

.tab-content {
	padding: 10px;
	border: 1px solid #DDD;
	margin-top: -19px;
	margin-bottom: 10px;
	background: url(/images/subtle_dots.png?embed=true);
}

.nav-tabs > .active > a {
	background: url(/images/subtle_dots.png?embed=true);	
}

#header-top { min-height: 78px; background-color: #262729; border-top: 1px solid #000; }

#header-top > .container-fluid { min-height:78px; }

#header-search { margin-top:26px; }

#nav { min-height: 35px; background-color: #1b1c1e; border-top: 1px solid #000; border-bottom: 2px solid #287abe; margin-bottom: 0; }
#nav ul { list-style-type: none; }
#nav .nav-link { height: 35px;}
#nav .nav-link a { padding: 12px 22px 9px 22px; line-height: 14px;  color: #fff; text-transform: uppercase; font-size: 11px; border-bottom: 2px solid #287abe; }
.current-page-item { background-color: #287abe; }
#nav .nav-link a:hover { text-decoration: none; background-color: #15456d; }
#nav .nav > li > a { text-shadow: none; }
#nav .btn-navbar { color: #000; padding: 1px 10px; }

.nav-list li { line-height:20px; }

.nav-list > .active > a { text-shadow: 0 1px 0 rgba(255, 143, 0, .5); }

.nav-list [class^="icon-"] {
margin-right: 2px;
margin-top: 2px;
}

.sidebar-nav .nav-header { font-size:15px}

#logo a
{
	float: left;
	margin-top: -8px;
	position: relative;
}

/* Responsive menu stuff */
#header-wrap .navbar-inner { 
	min-height:0;
	background: none;
	border: 0;
	box-shadow: 0 0 0;
	padding:0;
}

#header { width: 100%; }


#header-wrap .btn-navbar { 
	float:none;
	margin-top:13px;
}

.navbar-search .search-query { 
	background-color: white; 
}

#footer-iframe {
  width: 100%;
  height: 248px;
  border: 0;
  margin-bottom: -6px;
}

#content {
  padding: 20px;
  overflow: auto;
}

  /*Opera Fix*/
body:before {
	content:"";
	height:100%;
	float:left;
	width:0;
	margin-top:-32767px;/
}

.sidebar-nav {
	height: 45px;
	margin-bottom: 10px;
	background-color: #f5f5f5;
	border: 1px solid #eee;
	border: 1px solid rgba(0,0,0,0.05);
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
	box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
}
.sidebar-nav:before {
	display: block;
	padding: 0px;
	cursor: pointer;
	content: "Menu";
	font-size: 15px;
	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-weight: bold;
	color: #08c;
}
.sidebar-nav:hover, .sidebar-nav.shown {
	height: auto;
}
.sidebar-nav #nav-menu {
	display: none;
}
.sidebar-nav:hover #nav-menu, .sidebar-nav.shown #nav-menu {
	display: block;
}

.sidebar-nav > #nav-menu { border-right: 1px solid #ddd; font-size: 18px; line-height:21px; }

.callout > a { color: rgb(240, 132, 2); }
.callout > h2 { font-size: 18px; }

.label, .badge { font-size: 15px; }

.navbar-search .search-icon {
position: absolute;
top: 0;
right: 2px;
display: block;
width: 26px;
height: 26px;
cursor: pointer;
}

li.collapsibleListOpen{
	padding: 3px 15px;
	background: url('/images/minus.png?embed=true') no-repeat 0px 5px;
	cursor: pointer;
	padding-left: 17px;
}

.nav-menu .subtree-name: { padding: 3px 15px; }
.subtree-name:hover{ background-color: #EEE; }
.subtree-name:hover{ background-color: #EEE; }

li.collapsibleListClosed{
	padding: 3px 15px;
	background: url('/images/plus.png?embed=true') no-repeat 0px 5px;
	cursor: pointer;
	padding-left: 17px;
}

.breadcrumb { 
  font-size: 13px;
  padding: 0px 5px;
  margin: 0 0 10px;
}

.page-header {
  margin: 10px 0;
  border-bottom: 1px solid #ddd;
}

li.official {
	list-style-type: none;
	background: url(/images/favicon.ico) left center no-repeat;
	padding: 0 24px;
	margin-left: -20px;
}

#overlay {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    overflow: auto;
    background-color: rgba(0,0,0,.7);
    z-index: 10000;
}

#overlay .code-buttons {
	margin-top: 20px;
}

figure.code.expanded {
 position: fixed;
 top:0;
 left:0;
 padding:60px 40px 40px 40px;
 margin: 0;
 z-index:100000;
}

.video-container {
	position: relative;
	padding-bottom: 56.25%;
	padding-top: 30px;
	height: 0;
	overflow: hidden;
}

.video-container iframe,  
.video-container object,  
.video-container embed {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

@media screen and (min-width: 767px) {
	.sidebar-nav {
		height: auto;
		background: transparent;
		border: none;
		-webkit-border-radius: 0;
		-moz-border-radius: 0;
		border-radius: 0;
		-webkit-box-shadow: none;
		-moz-box-shadow: none;
		box-shadow: none;
	}
	.sidebar-nav:before {
		content: "";
	}
	.sidebar-nav #nav-menu {
		display: block;
	}
	#content {
		padding: 25px 0 0 0;
	}
}

@media screen and (min-width: 980px) {
  .sidebar-nav {
    margin-left:40px;
    width:280px;
  }
}

